    caches the field names rather than trying to work them out each time its asked.
    
  * Added a convenience subclass of RegexMultiLineReader (DOXMLReader) for reading 
    legacy DOXML which may contain multiple DOXML messages in sequence (the default 
    StringReader would only process the first DOXML message received)
   
Bug Fixes
=========

SC28: JDBC PreparedStatement writers should not use setObject(null), but setNull().

SC29: DB Event Mechanism error message for invalid SPROC is unclear
    
SC30: Remove need for constructor-arg on MBeanServer

SC31: DateHolder types should become java Dates when converting legacy DataObjects
      Added property to allow conversion of proprietary DataObject DateHolder types
      into java.util.Dates.
      The default value for this property is 'true' which means default behaviour will 
      differ from 3.3  
      
SC32: The pipeline DOXmlToDataObject -> DataObjectToOrderedMap will fail if the incoming
      DOXML contains more than one top-level data object. 
      Note that as a side-efffect, the default value for 'box returned arrays' in the
      AbstractConvertor class has changed from 3.3 (true) to 'false'.
      
=================================================
openadaptor3 production 3.3 Release Notes

See licences/licence.txt for Licence information.
=================================================

Date: 5th October 2007
Author: openadaptor Core Team

openadaptor 3.3
=======

Summary
=======
This is the third release of openadaptor 3

The openadaptor white paper can be downloaded from:

https://www.openadaptor.org/docs/whitepaper.pdf


This release focuses on stabilization. A number of areas have been reworked
or significantly enhanced.

==============================================================================

Major Changes
=============

This section details the main changes and enhancements in openadaptor 3.3

Documentation
=============
