@@ -1,13 +1,15 @@
 package com.tibco.tibrv;
 
+import org.openadaptor.StubException;
+
 public class Tibrv {
   public static final int IMPL_NATIVE = 0;
 
   public static void open(int i) throws TibrvException {
-    throw new RuntimeException("this is stub code, you need the tibrv.jar in your classpath");
+    throw new StubException(StubException.WARN_TIBCO_JAR);
   }
 
   public static TibrvQueue defaultQueue() {
-    throw new RuntimeException("this is stub code, you need the tibrv.jar in your classpath");
+    throw new StubException(StubException.WARN_TIBCO_JAR);
   }
 }
