@@ -1,8 +1,10 @@
 package com.tibco.tibrv;
 
+import org.openadaptor.StubException;
+
 public class TibrvQueue {
 
   public void dispatch() throws InterruptedException, TibrvException {
-    throw new RuntimeException("this is stub code, you need the tibrv.jar in your classpath");
+    throw new StubException(StubException.WARN_TIBCO_JAR);
   }
 }
