@@ -1,13 +1,15 @@
 package com.tibco.tibrv;
 
+import org.openadaptor.StubException;
+
 public class TibrvRvdTransport extends TibrvTransport {
 
   public TibrvRvdTransport(String service, String network, String daemon) throws TibrvException {
-    throw new RuntimeException("this is stub code, you need the tibrv.jar in your classpath");
+    throw new StubException(StubException.WARN_TIBCO_JAR);
   }
 
   public void send(TibrvMsg msg) {
-    throw new RuntimeException("this is stub code, you need the tibrv.jar in your classpath");
+    throw new StubException(StubException.WARN_TIBCO_JAR);
   }
 
 }
