@@ -1,7 +1,9 @@
 package com.tibco.tibrv;
 
+import org.openadaptor.StubException;
+
 public class TibrvTransport {
   public void send(TibrvMsg msg) throws TibrvException {
-    throw new RuntimeException("this is stub code, you need the tibrv.jar in your classpath");
+    throw new StubException(StubException.WARN_TIBCO_JAR);
   }
 }
