@@ -1,0 +1,57 @@
+/*
+ Copyright (C) 2001 - 2007 The Software Conservancy as Trustee. All rights reserved.
+
+ Permission is hereby granted, free of charge, to any person obtaining a copy of
+ this software and associated documentation files (the "Software"), to deal in the
+ Software without restriction, including without limitation the rights to use, copy,
+ modify, merge, publish, distribute, sublicense, and/or sell copies of the Software,
+ and to permit persons to whom the Software is furnished to do so, subject to the
+ following conditions:
+
+ The above copyright notice and this permission notice shall be included in all 
+ copies or substantial portions of the Software.
+
+ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
+ INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
+ PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+ HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+ OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
+ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+ Nothing in this notice shall be deemed to grant any rights to trademarks, copyrights,
+ patents, trade secrets or any other intellectual property of the licensor or any
+ contributor except as expressly stated herein. No patent license is granted separate
+ from the Software, for code that you delete from the Software, or for combinations
+ of the Software with other software or hardware.
+*/
+package org.openadaptor;
+
+/**
+ * Exception which is thrown when stub methods are 
+ * called but shouldn't be!
+ */
+public class StubException extends RuntimeException {
+  private static final long serialVersionUID = 1L;
+  
+  public static final String WARN_LEGACY_OA_JAR="Please put real legacy openadaptor.jar on classpatch";
+  public static final String WARN_TIBCO_JAR="Please put real tibrv.jar on classpath";
+  public static final String WARN_MQ_JAR="Please put real MQ jar on classpath";
+ 
+  /**
+   * Create default StubException
+   *
+   */
+  public StubException() {
+    super();
+  }
+
+  /**
+   * StubException with message
+   *
+   * @param msg   The error message.
+   */
+  public StubException(String msg) {
+    super(msg);
+  }
+
+}
