@@ -1,5 +1,6 @@
 package org.openadaptor.doxml;
 
+import org.openadaptor.StubException;
 import org.openadaptor.dataobjects.DataObject;
 import org.openadaptor.dataobjects.DataObjectException;
 
@@ -10,10 +11,10 @@ import org.openadaptor.dataobjects.DataObjectException;
 public class GenericXMLReader {
 
   public DataObject[] fromString(String xml) {
-    throw new RuntimeException("this is stub code, you need the legacy openadaptor jar in your classpath");
+    throw new StubException(StubException.WARN_LEGACY_OA_JAR);
   }
 
   public void setAttributeValue(String name, String value) throws DataObjectException {
-    throw new RuntimeException("this is stub code, you need the legacy openadaptor jar in your classpath");
+    throw new StubException(StubException.WARN_LEGACY_OA_JAR);
   }
 }
